cmake_minimum_required(VERSION 3.18 FATAL_ERROR)

if(ACCELERATOR STREQUAL "maca" OR ACCELERATOR STREQUAL "npu")
  project(FLAGOS_RUNTIME CXX C)
else()
  project(FLAGOS_RUNTIME CUDA CXX C)
endif()

set(LIBRARY_NAME flagos)

if(ACCELERATOR STREQUAL "maca")
  file(GLOB SOURCE_FILES "${CMAKE_CURRENT_SOURCE_DIR}/maca/csrc/*.cc")
elseif(ACCELERATOR STREQUAL "npu")
  file(GLOB SOURCE_FILES "${CMAKE_CURRENT_SOURCE_DIR}/npu/*.cc")
else()
  file(GLOB SOURCE_FILES "${CMAKE_CURRENT_SOURCE_DIR}/cuda/csrc/*.cc")
endif()

add_library(${LIBRARY_NAME} SHARED ${SOURCE_FILES})

target_include_directories(${LIBRARY_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_SOURCE_DIR})

if(ACCELERATOR STREQUAL "maca")
  target_link_libraries(${LIBRARY_NAME} PRIVATE ${CUDA_RUNTIME_LIB})
elseif(ACCELERATOR STREQUAL "npu")
  target_link_libraries(${LIBRARY_NAME} PRIVATE ${CUDA_RUNTIME_LIB})
else()
  find_package(CUDAToolkit REQUIRED)
  target_link_libraries(${LIBRARY_NAME} PRIVATE CUDA::cudart)
endif()

install(TARGETS ${LIBRARY_NAME}
    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_LIBDIR}
)
